--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -1,7 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="GuideToSnailsBKP.MainPage">
+             x:Class="GuideToSnailsBKP.MainPage"
+             xmlns:mct="clr-namespace:CommunityToolkit.Maui.Behaviors;assembly=CommunityToolkit.Maui">
+    <ContentPage.Behaviors>
+        <mct:StatusBarBehavior StatusBarColor="#7C9867" />
+    </ContentPage.Behaviors>
 
     <ScrollView>
         <StackLayout Orientation="Vertical" BackgroundColor="#B4B471">
